1652 Address PR review feedback for tool augmentation and observable execution
- Make AgentThinking record public for AugmentedToolCallbackProvider reflection access
- Remove duplicate requestToString/responseToString fields from ContextLoggerAdvisor
- Buffer tool execution events in ConcurrentLinkedQueue to prevent race condition
- Log exceptions instead of silently swallowing them in tool execution listener
- Log warning on JSON parse failure for tool input
- Fix List.of(array) bug by using Arrays.asList to properly spread ToolCallback array

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>